css/styles.css
/* ... */
.ben-line {
  position: absolute;
  top: 50%;
  right: -18px;
  transform: translateY(-50%);
  border: 1px solid rgba(255, 255, 255, 0.5);
  height: 124px;
}

@media (max-width: 1199px) {
  .benefits-list {
    min-width: 704px;
    flex-wrap: wrap;
    gap: 32px;
  }

  .benefits-list-item {
    width: 336px;
    padding-right: 28px;
  }

  .ben-line {
    display: none;
  }
}

@media (max-width: 767px) {
  .benefits-container {
    padding: 20px;
    width: 100%;
    max-width: 375px;
  }

  .benefits-list {
    width: 100%;
    min-width: 336px;
    flex-direction: column;
    gap: 20px;
  }
}

/* #endregion */

/* #region Section 3 Taste */
.taste-section {
  padding-bottom: 110px;
  padding-top: 77px;
}

.taste-title {
  font-weight: 600;
  font-size: 24px;
  letter-spacing: -0.03em;
  text-transform: uppercase;
  text-align: center;
  color: var(--black);
  width: 411px;
  margin: 0 auto;
  margin-bottom: 28px;
}

.taste-title .accent {
  color: var(--orange);
}

.taste-description {
  font-size: 14px;
  line-height: 1.29;
  letter-spacing: -0.02em;
  text-align: center;
  color: var(--black);
  width: 486px;
  margin: 0 auto;
  margin-bottom: 50px;
}

.taste-list {
  display: flex;
  gap: 19px;
  margin: 0 auto;
}

.taste-list-item {
  position: relative;
  overflow: hidden;
  padding: 28px 36px 28px 28px;
  border-radius: 15px;
  min-width: 270px;
  min-height: 270px;
  background-color: var(--white);
}

.taste-list-label {
  margin-top: 36px;
}

.taste-list-item:first-child {
  background-color: var(--orange);
  color: var(--white);
}

.taste-list-item:nth-child(3) {
  background-color: var(--violet);
  color: var(--white);
  /* border: var(--body-white); */
}

.taste-list-item:nth-child(even) {
  border: 1px solid var(--orange);
}

.taste-list-label {
  font-weight: 600;
  font-size: 14px;
  line-height: 1.28;
  letter-spacing: -0.02em;
  text-transform: uppercase;
}

/*taste cards*/

.pop-up {
  position: absolute;
  height: 100%;
  top: 0;
  left: 0;
  transform: translateY(101%);
  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
  background-color: var(--white);
  padding: 20px;
  overflow-y: auto;
  scrollbar-width: none;
}

.pop-up-btn-list {
  display: flex;
  gap: 6px;
  margin-bottom: 14px;
}

.pop-up-btn {
  border-radius: 35px;
  padding: 6px 16px;
  height: 24px;
  background-color: var(--orange);
  font-weight: 400;
  font-size: 10px;
  line-height: 1.2;
  color: var(--white);
  text-align: center;
}

.pop-up-btn:nth-child(2) {
  background-color: var(--white);
  border: 1px solid var(--orange);
  color: var(--black);
  padding: 6px 16px;
  height: 24px;
}

.pop-up-title {
  font-weight: 600;
  font-size: 18px;
  letter-spacing: -0.03em;
  text-transform: uppercase;
  margin-bottom: 8px;
  color: var(--black);
}

.pop-up-text {
  font-size: 14px;
  line-height: 1.29;
  letter-spacing: -0.02em;
  color: var(--black);
  min-width: 230px;
}

.taste-list-item:hover .pop-up {
  transform: translateY(0%);
}

.taste-list-item:hover {
  background-color: transparent;
  border: 1px solid var(--orange);
  transition: background-color 100ms;
  transition-delay: 0.5s;
}

@media (max-width: 1199px) {
  .taste-list {
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 32px;
  }

  .taste-list-item {
    min-width: 336px;
    padding: 28px;
  }

  .taste-list-label {
    margin-top: 25px;
  }

  .taste-list-item:nth-child(2) {
    order: 3;
  }

  .taste-list-item:nth-child(3) {
    order: 4;
  }

  .taste-list-item img {
    margin: 0 auto;
  }
}

@media (max-width: 767px) {
  .taste-title {
    font-size: 20px;
    width: 283px;
    margin-bottom: 24px;
  }

  .taste-description {
    width: 335px;
    margin-bottom: 32px;
  }

  .taste-list {
    flex-direction: column;
    gap: 20px;
  }

  .taste-list-item {
    min-width: 335px;
  }

  .taste-list-item:nth-child(2) {
    order: 0;
  }

  .taste-list-item:nth-child(3) {
    order: 0;
  }
}

/* #endregion */

/* #region Section 4 Made */
.made-section {
  padding-bottom: 100px;
}

.made-title {
  font-weight: 600;
  font-size: 24px;
  line-height: 1.17;
  letter-spacing: -0.03em;

  text-align: center;
  text-transform: uppercase;
  color: var(--black);
  margin-bottom: 50px;
}

.made-inline {
  color: var(--orange);
}

.made-container {
  display: flex;
  align-items: stretch;
  flex-direction: row;
  gap: 20px;
}

.made-img {
  border-radius: 15px;
}

.made-recipe-container {
  width: 516px;
  background-color: var(--white);
  padding: 32px 59px 32px 32px;
  border-radius: 15px;
}

.made-recipe-title {
  font-weight: 600;
  font-size: 18px;
  line-height: 1.33;
  color: var(--black);
  margin-bottom: 28px;
}

.recipe-desc {
  font-weight: 400;
  font-size: 14px;
  line-height: 1.3;
  letter-spacing: -0.02em;
}

.recipe-list::before {
  content: "";
  background-color: var(--list-mark-fill);
  border-radius: 50%;
  border: 1px solid var(--list-mark-stroke);
  min-height: 8px;
  min-width: 8px;
}

.recipe-list {
  display: flex;
  align-items: baseline;
  gap: 8px;
}

.made-recipe-list li:not(:last-child) {
  margin-bottom: 24px;
}

.made-thumb button {
  display: none;
}

/*! Tablet Adaptive */

@media (max-width: 1199px) {

  .made-section {
    padding-bottom: 80px;
  }

  .made-container {
    flex-direction: column;
    align-items: center;
    gap: 20px;
  }

  .made-recipe-container {
    padding-right: 102px;
    width: 614px;
  }

}
/* ... */

